Added StepContribution and ChunkContext in VoidMethod; Spring Batch version to 4.2.2.RELEASE; added ListReader and ListWriter;